--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Raghavendra Nimiwal"
-  avatar           : "webpageProfile.jpg"
+  avatar           : "webpageProfile.png"
   bio              : "Research Assistant at ICTS-TIFR"
   location         : "India"
   employer         :
