--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,5 +13,5 @@ main:
   - title: "Blog Posts"
     url: /year-archive/
     
-  - title: "Notes"
-    url: /notes/
+  - title: "Knowledge Base"
+    url: /knowledge-base/
