--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
 main:
     
   - title: "Projects"
-    url: /projects/
+    url: /talks/
     
   - title: "Publications"
     url: /publications/ 
