--- a/_config.yml
+++ b/_config.yml
@@ -190,6 +190,9 @@ collections:
   projects:
     output: true
     permalink: /:collection/:path/
+  knowledgeBase:
+    output: true
+    permalink: /:collection/:path/
 
 
 # Defaults
@@ -251,6 +254,14 @@ defaults:
   - scope:
       path: ""
       type: projects
+    values:
+      layout: single
+      author_profile: true
+      share: # true
+  # _knowledgeBase
+  - scope:
+      path: ""
+      type: knowledgeBase
     values:
       layout: single
       author_profile: true
