--- a/_config.yml
+++ b/_config.yml
@@ -263,7 +263,7 @@ defaults:
       path: ""
       type: knowledgeBase
     values:
-      layout: talk
+      layout: single
       author_profile: true
       share: # true
 
